# dfmea

./: .env.example  .gitignore  .npmrc  .prettierignore  AGENTS.md  CLAUDE.md  README.md  eslint.config.mjs  fix-deprecation.js  implementation_plan.md  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json  tsconfig.json  vite.config.ts
engine/: pyproject.toml
engine/plugins/dfmea/: SKILL.md  failure-chain-schema.md  node-schema.md  storage-spec.md
engine/plugins/pfmea/: SKILL.md
engine/src/dfmea_cli/: __main__.py  cli.py
engine/src/dfmea_cli/commands/: __init__.py  analysis.py  context.py  export_markdown.py  init.py  projection.py  query.py  structure.py  trace.py  validate.py
engine/src/quality_adapters/: __init__.py
engine/src/quality_adapters/cli/: __init__.py  dfmea.py  quality.py
engine/src/quality_adapters/opencode/: __init__.py  installer.py
engine/src/quality_core/: __init__.py
engine/src/quality_core/cli/: __init__.py  errors.py  output.py  quality.py
engine/src/quality_core/git/: __init__.py  paths.py  project.py  runner.py
engine/src/quality_core/graph/: __init__.py  loader.py  model.py
engine/src/quality_core/methods/: __init__.py  contracts.py  registry.py
engine/src/quality_core/plugins/: __init__.py  contracts.py  project_plugins.py  registry.py  schema_snapshots.py
engine/src/quality_core/projections/: __init__.py  (+1 more)
engine/src/quality_methods/: __init__.py
engine/tests/core/: test_quality_plugins.py  test_quality_project_git_commands.py  test_quality_resources.py
(+638 files in other folders)
