[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dfmea-cli"
version = "0.1.0"
description = "CLI-first DFMEA tooling"
requires-python = ">=3.11"
dependencies = ["typer>=0.12,<1"]

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[project.scripts]
dfmea = "dfmea_cli.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
